--- a/src/index.ejs
+++ b/src/index.ejs
@@ -32,7 +32,7 @@
       { "color": "red"}
     </script>
   </div>
-  <div data-component="ProductColors" product="Aria®" ></div>
+  <div data-component="ProductColors" product="Excursion ® Premier" ></div>
   <script async src="/bundle.js"></script>
 </body>
 </html>
